# guidey

./: .env.example  .gitignore  LICENSE  Makefile  README.md  plan.md
backend/: pyproject.toml
backend/scripts/: feedback_batch.py  ingest_pipeline.py
backend/src/: config.py  main.py
backend/src/application/: dependencies.py
backend/src/application/guide/: analyze_use_case.py  blocks.py  chat_use_case.py  feedback_use_case.py  judge_use_case.py  outputs.py  periodic_use_case.py  plan_cache.py  plan_query_use_case.py  plan_use_case.py  schemas.py  session_use_case.py  sse_schemas.py  use_case.py
backend/src/application/guide/schemas/: api.py  blocks.py  sse_schemas.py
backend/src/application/guide/usecases/: analyze_use_case.py  chat_use_case.py  feedback_use_case.py  periodic_use_case.py  plan_query_use_case.py  plan_use_case.py  session_use_case.py
backend/src/common/: exceptions.py  json_utils.py  metrics.py  telemetry.py
backend/src/domain/guide/: model.py  prompt_loader.py  service.py
backend/src/domain/guide/prompts/analyze_oneshot/: v1.md
backend/src/domain/guide/prompts/appraise_caption/: v1.md
backend/src/domain/guide/prompts/calibration/: v1.md  v2.md
backend/src/domain/guide/prompts/explore_stage1/: v1.md  v2.md
backend/src/domain/guide/prompts/periodic_stage1/: v1.md  v2.md
backend/src/domain/guide/prompts/plan_generation/: v1.md  v2.md
backend/src/domain/guide/prompts/stage2_escalation/: v1.md  v2.md
backend/src/domain/guide/prompts/user_action_stage1/: v1.md  v2.md
backend/src/infrastructure/agent/: agent.py  graph.py  pipeline.py  tools.py
backend/src/infrastructure/llm/: base.py  claude.py  factory.py  ollama.py
backend/src/infrastructure/rag/: bm25.py  embeddings.py  hybrid.py  milvus.py
backend/src/infrastructure/repositories/: feedback_repository.py  plan_repository.py
backend/src/infrastructure/session/: models.py  store.py
backend/src/routes/: __init__.py  guide_router.py
backend/static/manual/mac-setup/: steps.json
docs/: agent-architecture.md  api-architecture.md  api-reference.md  ar-plan.md  future-design.md  llm-strategy.md  mobile-architecture.md  rag-architecture.md  xreal-unity-integration.md
mobile/: app.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native.config.js  tamagui.config.ts  withUnityAndroid.js
mobile/app/: +not-found.tsx  _layout.tsx  camera-probe.tsx  explore.tsx  goal.tsx  guide.tsx  settings.tsx
mobile/types/: plan.ts  (+1 more)
(+113 files in other folders)
